# pys3server

./: .gitignore  example.py  pyproject.toml
pys3server/: __init__.py  base_interface.py  responses.py  server.py  signature_v4.py
test/: conftest.py  test_s3server.py
