[tool.poetry]
name = "pys3server"
version = "0.1.0b9"
description = "Simple and extendable s3 server."
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blacksheep = "^2.0.7"
uvicorn = "^0.30.1"
msgpack = "^1.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
s3lite = "^0.1.5b2"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-append --cov=pys3server"

[tool.coverage.run]
data_file = "coverage.coverage"
omit = ["pys3server/interfaces/*"]
